--- a/src/pages/settings.module.css
+++ b/src/pages/settings.module.css
@@ -4,15 +4,17 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	padding-top: 20px;
+
+	overflow: auto;
 }
 
-.settings > div{
+.settings > div {
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 20px;
 }
 
 .options-container {
@@ -24,22 +26,21 @@
 	text-transform: capitalize;
 	margin-top: 40px;
 	margin-bottom: 10px;
-	
+
 	padding-left: 20px;
-	
 }
 
 .options {
-    width: 100%;
-    min-height: 52px;
-    border: 1px solid #c4c4c4;
+	width: 100%;
+	min-height: 52px;
+	border: 1px solid #c4c4c4;
 	border-radius: 12px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .options > :not(:last-child) {
-    border-bottom: 1px solid #c4c4c4;
+	border-bottom: 1px solid #c4c4c4;
 }
 
 .options .chevron-right {
@@ -147,10 +148,9 @@ input:checked + .slider:before {
 }
 
 .logout {
-	margin-top: auto;
+	margin-top: 50px;
 	width: 90%;
-	height: 52px;
-
+	min-height: 52px;
 	border: 1px solid #c4c4c4;
 	background: none;
 	color: rgb(255, 69, 58);
@@ -159,53 +159,52 @@ input:checked + .slider:before {
 	font-size: 1rem;
 	font-weight: bold;
 	margin-right: auto;
-	margin-bottom: 52px;
-    transition: border ease-out 220ms;
+	transition: border ease-out 220ms;
 }
 
-.logout:focus, .logout:hover {
-    border: 1px solid rgb(255, 69, 58);
+.logout:focus,
+.logout:hover {
+	border: 1px solid rgb(255, 69, 58);
 }
-
 
 /*DIALOG*/
 
 .dialog-container {
-    z-index: 100;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0, 0.5);
-    transform: translateY(100%);
-    transition: transform ease-out 200ms;
+	z-index: 100;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	transform: translateY(100%);
+	transition: transform ease-out 200ms;
 }
 
 .dialog-container.show {
-    transform: translateY(0%);
+	transform: translateY(0%);
 }
 
 .dialog {
-    position: fixed;
-    width: 100%;
-    height: 98%;
-    background: #fff;
-    border-top-left-radius: 24px;
-    border-top-right-radius: 24px;
-    display: flex;
-    flex-direction: column;
-    bottom: 0;
+	position: fixed;
+	width: 100%;
+	height: 98%;
+	background: #fff;
+	border-top-left-radius: 24px;
+	border-top-right-radius: 24px;
+	display: flex;
+	flex-direction: column;
+	bottom: 0;
 }
 
 .dialog > * {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .dialog nav {
-    width: 100%;
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
-    height: 50px;
+	height: 50px;
 }
 
 .dialog nav > :last-child {
@@ -221,62 +220,60 @@ input:checked + .slider:before {
 }
 
 .dialog main {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: calc(100% - 150px); 
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	height: calc(100% - 150px);
 }
 
-
 .dialog footer {
-    border-top: 1px solid #eaeaea;
-    width: 100%;
-    height: 100px;
-    margin-top: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+	border-top: 1px solid #eaeaea;
+	width: 100%;
+	height: 100px;
+	margin-top: auto;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .dialog footer button {
 	width: 200px;
-    cursor: pointer;
-    border: 1px solid #45C0E9;
+	cursor: pointer;
+	border: 1px solid #45c0e9;
 	border-radius: 4px;
 	height: 52px;
 	color: #fff;
 	font-size: 1rem;
 	font-weight: bold;
-	background: #45C0E9;
+	background: #45c0e9;
 	transition: opacity ease-out 220ms;
 }
 
 .dialog .close {
-    margin-top: 16px;
-    margin-left: 16px;
-    width: 24px;
-    height: 24px;
-    background: transparent;
-    outline: none;
-    border: none;
-    padding: 0;
+	margin-top: 16px;
+	margin-left: 16px;
+	width: 24px;
+	height: 24px;
+	background: transparent;
+	outline: none;
+	border: none;
+	padding: 0;
 }
 
 .dialog .close > div {
-    width: 24px;
-    height: 24px;
-    mask-size: cover;
+	width: 24px;
+	height: 24px;
+	mask-size: cover;
 	background-color: #959595;
-    mask-position: center;
-    transition: background-color ease-out 220ms;
+	mask-position: center;
+	transition: background-color ease-out 220ms;
 	mask-repeat: no-repeat;
-    mask-image: url('../assets/icons/x.svg');
+	mask-image: url('../assets/icons/x.svg');
 	-webkit-mask-image: url('../assets/icons/x.svg');
 }
 
 /*Goal*/
 .goal-stage-display footer {
-	
 	border-top: 0px;
 }
 
@@ -288,9 +285,37 @@ input:checked + .slider:before {
 }
 
 .goal-stage-display footer button:hover {
-	border: 1px solid #45C0E9;
+	border: 1px solid #45c0e9;
 }
 
 .goal-stage-display footer button:hover .add-btn {
-	background-color: #45C0E9;
+	background-color: #45c0e9;
+}
+
+.goal-stage-display .empty {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	font-size: 1.5rem;
+	text-align: center;
+	color: #c4c4c4;
+}
+
+.goal-stage-display .empty > div {
+	width: 90%;
+}
+
+@media screen and (max-height: 800px) {
+	.logout {
+		margin-bottom: 72px;
+	}
+}
+
+@media screen and (min-height: 800px) {
+	.logout {
+		margin-top: auto;
+		margin-bottom: 52px;
+	}
 }
